feat: add UI elements

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Chip8 Emulator</title>
   </head>
   <body>
+    <b>select ROM</b>
+    <select id="romSelector"></select>
     <div id="app"></div>
+    <div class="btn-container">
+      <button id="playPause">Play/Pause</button>
+      <button id="step">Step</button>
+      <button id="reset">Reset</button>
+    </div>
+    <div class="register-container"></div>
+    <div class="keyboard-container">
+      <strong>Keyboard Map</strong>
+      <pre>
+Chip 8             User Keyboard
+1 2 3 C            1 2 3 4
+4 5 6 D            Q W E R
+7 8 9 E            A S D F
+A 0 B F            Z X C V
+      </pre>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
