fix: fallthrough + ui changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <title>Chip8 Emulator</title>
   </head>
   <body>
-    <b>select ROM</b>
-    <select id="romSelector"></select>
+    <div class="rom-container">
+      <b>select ROM</b>
+      <select id="romSelector"></select>
+    </div>
     <div id="app"></div>
     <div class="btn-container">
       <button id="playPause">Play/Pause</button>
